syntax = "proto3";
package com.jd.im.message;
enum MessageType {
	UNKNOWN = 0;
    CHAT = 1;                               // 1v1聊天消息
    GROUP_CHAT = 2;                         // 群组聊天消息
    PUB_ACC = 3;                            // 公众账号
    INFO = 4;                               // 终端之间的其他消息,如:震屏,正在输入等 SF/RT
    OPTIONS = 5;                            // 终端之间的协商类消息,需要应答
    SERVICE_NOTIFY = 6;                     //来自服务的通知: 好友,状态,圈子更新,群成员变更,终端上线通知,新邮件通知
    SERVICE_ACCOUNT = 7;                    // TODO来自系统账号的消息: 暂未定义
    SYSTEM_BROADCAST= 8;                    // 系统广播消息
    DISPOSITION_NOTIFICATION = 11;          // 消息递送通知
    DISPLAYED_STATUS = 12;                  // 消息已读状态同步
    RECALL = 13;                            // 回消息
    RESERVED = 14;                          // 保留
}

enum MessageDirection{
	OTHOR = 0;
	UP= 1;	//上行消息
	DOWN=2;	//下行消息
}

//消息内容
message Content{
    string uuid = 1;        // 消息编号 不能重复
    string fromUri = 2;            // 
    string fromEpid = 3;            // 
    string fromNickname = 4;           // 
    string contentType = 5;           // 消息类型
	bytes contentBuffer = 6;            // 消息内容
	string strContent= 7;
}
//接收者
message Receiver{
	string toUri= 1;        // 消息编号 不能重复
    string toEpid= 2;            // 
    bool exceptThisEpid= 3;            // 
}
//消息请求
message MessageRequst{
	MessageType messageType = 1;	//消息类型
	string options= 2;
	Content content = 3;		//消息内容
	repeated Receiver receivers= 4;		//接收者集合
	string peerUri = 5;            //
	string topic= 99;            // 
}
//消息体
message Message{
	uint64 msgId = 1; //消息编号
	uint64 ownerId = 2; //用户自己唯一标识
	string ownerEpid = 3; //用户自己终端编号
	fixed64 time = 4;//
	MessageDirection direction = 5; //
	string peerUri = 6;
	MessageType messageType = 7 ;
	string options = 8;//
	Content content = 10;//
}

//消息概要
message DialogSummary{
	string peerUri =1;//
	int32 undeliveredCount = 2;//
	uint64 lastMsgId = 3;//
	int32 readableCount = 4;//
	uint64 lastReadableMsgId = 5;//
	uint64 lastReadableMsgTime = 6;//
	string lastReadableMsgSummary = 7;//
	int32 displayedMsgCount =8;//
	uint64 lastDisplayedMsgId =9;//
}
//消息响应
message MessageResponse{
	uint64 lastMsgId = 1; //
	uint64 beginMsgId = 2;//
	int32 msgCount = 3; //
	repeated Message messages = 4;//
	repeated DialogSummary dialog = 5;//
	bool hasMore = 6;//
}


